# xlsxwriter_lite

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: hello_world.py  perf_python.py  perf_rust.py
src/: lib.rs
